--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -48,6 +48,7 @@
     .about
         padding: 0% 0% 4%
         max-width: 100vw
+        overflow: hidden
         .header
             font-size: 66px
             margin: 3vh 0 0 0
@@ -78,6 +79,7 @@
         padding: 0% 0% 4%
         max-width: 100vw
         min-height: 40vh
+        overflow: hidden
         .header
             font-size: 66px
             margin: 3vh 0 0 0
@@ -112,6 +114,7 @@
         padding: 0 0 4%
         max-width: 100vw
         min-height: 70vh
+        overflow: hidden
         .header
             font-size: 66px
             margin: 3vh 0 0 0
@@ -144,6 +147,7 @@
 @media (max-width: 823px) and (orientation: landscape)
     .about
         padding: 0 0 4%
+        overflow: hidden
         .header
             font-size: 52px
             margin: 0 15px
@@ -163,6 +167,29 @@
             height: 175%
             top: 0%
 @media (max-width: 1200px) and (orientation: landscape)
+    .about
+        padding: 0 0 4%
+        min-height: 40vh
+        overflow: hidden
+        .header
+            font-size: 52px
+            margin: 0 15px
+            .gold
+                color: gold
+        .trainers
+            width: 100%
+            div
+                width: 50%
+                h3
+                    margin: 0 15px
+                    font-size: 30px
+                p
+                    font-size: 24px
+        &::after   
+            background-color: rgba(0, 0, 0, 0.55)
+            height: 175%
+            top: 0%
+@media (max-width: 1300px) and (orientation: landscape)
     .about
         padding: 0 0 4%
         min-height: 40vh
