--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -177,7 +177,7 @@ header
                         padding: 0 55px
         div
             display: none
-@media (min-width: 1367px) and (max-width: 1420px) and (orientation: landscape)
+@media (min-width: 1200px) and (max-width: 1420px) and (orientation: landscape)
     div
         display: none
 
