--- a/sass/_offer.sass
+++ b/sass/_offer.sass
@@ -402,4 +402,4 @@ section.offer
                 th
                     padding: 8px
         .wrapedDown
-            height: 50vh
+            height: 60vh
